--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "fabriconstruc-web",
   "version": "1.0.0",
@@ -9,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.4",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
